# Backtest_Strategies

./: .gitignore  README.md  VWMA strategy_backtest.py  VWMABandsStrategy.html  main.py  pyproject.toml  requirements.txt  setup.py  setup_env.ps1  setup_env.sh
config/: config.py
src/data/: data_loader.py
src/strategies/: vwma_strategy.py
src/utils/: plot_utils.py  results_utils.py
